<resources>
    <string name="app_name">Vocation</string>
    <string name="nazva">Українські вибори</string>
    <string name="lname">Прізвище</string>
    <string name="fname">Ім\'я</string>
    <string name="id">ID паспорта</string>
    <string name="Login">Вхід</string>
    <string name="available_votings">Доступні вибори</string>
    <string name="date">Дата:</string>
    <string name="votingpage">Сторінка виборів</string>
    <string name="becomecandidate">Стати кандидатом</string>
    <string name="vote">Проголосувати</string>
    <string name="Info">Інформація</string>
    <string name="numberofvotes">Кількість голосів:</string>
</resources>
